fixed navigation overlay overflow

--- a/src/styles/layout/navigation.scss
+++ b/src/styles/layout/navigation.scss
@@ -68,9 +68,9 @@
         box-sizing: border-box;
         display: none;
         position: absolute;
-        // height: calc(100vh - 64px);
+        height: calc(100vh - 64px);
         min-height: 100vh;
-        width: 100vw;
+        width: 100%;
         padding: $navigation-overlay-padding-top $navigation-overlay-padding-horizontal;
         z-index: $navigation-overlay-zindex;
 
